force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Copy_Log__c/fields/agf__Copied_On__c.field-meta.xml
<CustomField>
    <fullName>agf__Copied_On__c</fullName>
    <label>Copied On</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>