force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Copy_Log__c/fields/agf__Text__c.field-meta.xml
<CustomField>
    <fullName>agf__Text__c</fullName>
    <label>Text</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>