force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Copy_Log__c/fields/agf__Title__c.field-meta.xml
<CustomField>
    <fullName>agf__Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>