force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Copy_Log__c/fields/agf__Upserts__c.field-meta.xml
<CustomField>
    <fullName>agf__Upserts__c</fullName>
    <label>Inserts/Updates</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>